tests/trybuild/stages/par_system_no_colon.rs
use brood::system::schedule::stages;

type Stages = stages!{
    par_system,
};

fn main() {}
